# AIPackager_v3

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  additional-tasks.md  alembic.ini  closeapps-problem.md  flask_docs.json  flask_docs.txt  mcp_config.json  project_plan.md  psadt_v4_cmdlets.json  pydantic_ai_docs.txt  pyproject.toml  requirements.in  requirements.txt  run.py  run_crawler.py  sprint0.md  sprint1.md  sprint2-5.md  sprint2.md  sprint3.md  sprint4.md  sprint5.md  sprint6.md  test_advisor_v4_compliance.py  test_enhanced_hallucination_detection.py  test_evaluation_design.html  test_mcp_debug.py  test_psadt_parser.py  test_v3_vs_v4_detection.py
.claude/: settings.local.json
alembic/: env.py
diagrams/: aipackager_architecture_final.md  architecture.md
docs/: agentic-workflow-plan-part1.md  agentic-workflow-plan-part2.md  api-reference.md  application-functions.mdx  architecture-overview.md  contributing.md  deployment.md  implementation-summary.md  implementation_plan.md  knowledge-base-implementation-plan.md  mcp-integration-plan.md  workflow-diagram.md
memory/: additional-tasks.md  evaluation_summary.md
src/: __init__.py
tests/: conftest.py  debug_mcp_connection.py  test_advisor_service.py  test_api_routes.py  test_ci.py  test_dependencies.py  test_enhanced_hallucination_detection.py  test_environment.py  test_file_persistence.py  test_generate_script_async_failure.py  test_hallucination_detection_real.py  test_hallucination_detector.py  test_instruction_processor.py  test_logging_cmtrace.py  (+19 more)
(+61 files in other folders)
