[project]
name = "aipackager"
version = "0.2.0"
description = "AIPackager v2 - UI-first, TDD, KISS"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12"
dependencies = [
    "Flask>=2.3.0",
    "Werkzeug>=2.3.0",
    "Jinja2>=3.1.0",
    "SQLAlchemy>=2.0.0",
    "Alembic>=1.12.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=22.0.0",
    "pre-commit>=3.0.0",
    "sphinx>=5.0.0",
]

[tool.setuptools]
packages = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Exclude alembic directory (generated migration code)
exclude = [
    "alembic/.*",
]

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "src.app.routes"
warn_return_any = false

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py"
]
python_classes = [
    "Test*"
]
python_functions = [
    "test_*"
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
